[gd_scene load_steps=8 format=2]

[ext_resource path="res://Carnevalee Freakshow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shopping.gd" type="Script" id=2]
[ext_resource path="res://Font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.000758708
anchor_top = -0.00129481
anchor_right = 0.999241
anchor_bottom = 0.998705
margin_left = 0.776917
margin_top = -0.776886
margin_right = 0.776917
margin_bottom = -0.776917
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="."]
anchor_left = 0.499241
anchor_right = 0.499241
margin_left = -181.223
margin_top = 18.1315
margin_right = 183.777
margin_bottom = 96.1315
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.0352941, 0.584314, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Shopping[/center]"
text = "Shopping"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack_Header" type="RichTextLabel" parent="."]
anchor_left = 0.499241
anchor_right = 0.499241
margin_left = -465.0
margin_top = 170.0
margin_right = -241.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( -392.074, -32.45 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.0352941, 0.584314, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Attack[/center]"
text = "Attack"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor_Header" type="RichTextLabel" parent="."]
anchor_left = 0.499241
anchor_right = 0.499241
margin_left = -121.614
margin_top = 170.0
margin_right = 102.386
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.0352941, 0.584314, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Armor[/center]"
text = "Armor"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Header" type="RichTextLabel" parent="."]
anchor_left = 0.499241
anchor_right = 0.499241
margin_left = 228.765
margin_top = 170.0
margin_right = 452.765
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.0352941, 0.584314, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Health[/center]"
text = "Health"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack_Info" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.00129481
anchor_right = 0.5
anchor_bottom = -0.00129481
margin_left = -485.0
margin_top = 250.777
margin_right = -206.0
margin_bottom = 389.777
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.552941, 0.588235, 0.572549, 1 )
bbcode_enabled = true
bbcode_text = "[center]You earned [center]"
text = "You earned "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor_Info" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.00129481
anchor_right = 0.5
anchor_bottom = -0.00129481
margin_left = -149.028
margin_top = 251.0
margin_right = 131.972
margin_bottom = 390.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.552941, 0.588235, 0.572549, 1 )
bbcode_enabled = true
bbcode_text = "[center]You earned [center]"
text = "You earned "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Info" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.00129481
anchor_right = 0.5
anchor_bottom = -0.00129481
margin_left = 193.581
margin_top = 251.0
margin_right = 474.581
margin_bottom = 390.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.552941, 0.588235, 0.572549, 1 )
bbcode_enabled = true
bbcode_text = "[center]You earned [center]"
text = "You earned "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold_Info" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = -0.00129481
anchor_right = 0.5
anchor_bottom = -0.00129481
margin_left = -328.769
margin_top = 107.546
margin_right = 332.231
margin_bottom = 171.546
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.552941, 0.588235, 0.572549, 1 )
bbcode_enabled = true
bbcode_text = "[center]You earned [center]"
text = "You earned "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 355.816
margin_top = 484.781
margin_right = 667.816
margin_bottom = 581.781
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Go Deeper"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeAttack" type="Button" parent="."]
margin_left = 53.0
margin_top = 385.0
margin_right = 261.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 138.154, 38.1074 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Upgrade Attack"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeArmor" type="Button" parent="."]
margin_left = 407.785
margin_top = 385.709
margin_right = 613.785
margin_bottom = 448.709
rect_pivot_offset = Vector2( 138.154, 38.1074 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Upgrade Armor"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="Button" parent="."]
margin_left = 752.725
margin_top = 385.709
margin_right = 958.725
margin_bottom = 448.709
rect_pivot_offset = Vector2( 138.154, 38.1074 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Heal"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UpgradeAttack" to="." method="_on_UpgradeAttack_pressed"]
[connection signal="pressed" from="UpgradeArmor" to="." method="_on_UpgradeArmor_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_Heal_pressed"]
